--- a/src/store/components/search/search.component.html
+++ b/src/store/components/search/search.component.html
@@ -1,8 +1,14 @@
 <h2>Zoek een boek</h2>
-<input #searchTerm type="text"/><button (click)="search(searchTerm.value)">Zoek</button>
+<input #searchTerm type="text"/>
+<button (click)="search(searchTerm.value)">Zoek</button>
 
 <div>
   <div *ngFor="let book of books">
-    <img src="{{book.thumbnail}}&id={{book.id}}"/> <a href="#" (click)="open(book)">{{book.title}}</a>
+    <img src="{{book.thumbnail}}&id={{book.id}}"/>
+    <a [routerLink]="['/bookdetails', book.isbn]" routerLinkActive="active">{{book.title}}</a>
+    <span *ngIf="canEdit"> |
+      <a [routerLink]="['/editbook', book.isbn]" routerLinkActive="active">Bewerk</a>
+    </span>
+    | <a [routerLink]="['/orderbook', book.isbn]" routerLinkActive="active">Bestel</a>
   </div>
 </div>
