--- a/src/store/components/search/search.component.css
+++ b/src/store/components/search/search.component.css
@@ -1,8 +1,19 @@
+.searchcontainer{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.searchinput{
+
+}
+.results{
+  min-height: 150px;
+  width: 600px;
+}
 .result{
   border: 1px solid black;
   display: flex;
-  min-height: 150px;
-  max-width: 700px;
 }
 
 .left{
