--- a/src/store/components/bookdetails/bookdetails.component.html
+++ b/src/store/components/bookdetails/bookdetails.component.html
@@ -1,3 +1,6 @@
 <h3>Details: {{book.title}} - {{book.isbn}}</h3>
 
+<button mat-raised-button color="primary" [routerLink]="['/orderbook', book.isbn]">Koop</button>
+<button mat-raised-button color="accent" routerLink="/">Home</button>
 <app-recommended [book]="book"></app-recommended>
+
